# thesis_refactoring

./: .gitignore  README.md  results.txt  todo.txt
TUM_monoVO_dataset/dataset/sequence_01/rectified/: data.txt  times.txt
blender_scenes/: cube_1.blend  cube_2.blend  cube_2.blend1  cube_3.blend  cube_3.blend1  cube_4.blend  cube_4.blend1  cube_5.blend  cube_5.blend1  cube_scene.blend  scene_roll.blend  scene_roll.blend1
blender_scenes/python_scripts/: create_cameras_in_scene.py  loadstate.py  loadstate_cams.py  script.py
code/: CMakeLists.txt
code/dataset/bunny_1/: bunny_1.json
code/dataset/bunny_2/: bunny_2.json
code/dataset/bunny_3/: bunny_3.json
code/dataset/bunny_4/: bunny_4.json
code/dataset/bunny_5/: bunny_5.json
code/dataset/bunny_scene_cycles/: bunny_scene_cycles.json  state_cameras.json
code/dataset/courtyard_1/: courtyard_1.json
code/dataset/courtyard_2/: courtyard_2.json
code/dataset/courtyard_3/: courtyard_3.json
code/dataset/courtyard_4/: courtyard_4.json
code/dataset/courtyard_5/: courtyard_5.json
code/dataset/cube_1/: cube_1.json
code/dataset/cube_2/: cube_2.json
code/dataset/cube_3/: cube_3.json
code/dataset/cube_4/: cube_4.json
code/dataset/cube_5/: cube_5.json
code/dataset/cube_scene/: cube_scene.json
code/dataset/sequence_01/: data.txt
code/dataset/spaceship_1/: spaceship_1.json
code/dataset/spaceship_2/: spaceship_2.json
code/dataset/spaceship_3/: spaceship_3.json
code/dataset/spaceship_4/: spaceship_4.json
code/dataset/spaceship_5/: spaceship_5.json
code/executables/: CMakeLists.txt  eval_orb_initializer.cpp  test_coeffs.cpp  test_dso.cpp  test_mapping.cpp  test_tracking.cpp
code/src/: BundleAdj.cpp  BundleAdj.h  CamCouple.cpp  CamCouple.h  CameraForMapping.cpp  CameraForMapping.h  CamerasContainer.cpp  CamerasContainer.h  CandidatesActivator.cpp  CandidatesActivator.h  CandidatesActivator_.cpp  CandidatesActivator_.h  CoarseGenerator.cpp  CoarseGenerator.h  CoarseRegions.cpp  CoarseRegions.h  KeyframeHandler.cpp  KeyframeHandler.h  LinSystem.cpp  LinSystem.h  LinSystemBA.cpp  LinSystemBA.h  LinSystemTracking.cpp  LinSystemTracking.h  PointsContainer.cpp  PointsContainer.h  PointsHandler.cpp  PointsHandler.h  Pyramid.cpp  Pyramid.h  Tracker.cpp  Tracker.h  Tree.cpp  Tree.h  camera.cpp  camera.h  defs.h  dso.cpp  dso.h  environment.cpp  (+12 more)
code/src_old/: bundleadj.cpp  bundleadj.h  camera.cpp  camera.h  defs.h  dtam.cpp  dtam.h  environment.cpp  epline.cpp  epline.h  image.h  initializer.cpp  initializer.h  keyframe.cpp  keyframe.h  mapper.cpp  mapper.h  oldfunctions.txt  parameters.h  plot_functions.h  spectator.cpp  spectator.h  tracker.cpp  tracker.h  utils.cpp  utils.h  wavelet.cpp  wavelet.h
matlab_scripts/: JM.mat  J_YXZ.mat  J_quat.mat  getBounds_jac.m  getCoord.m  getD1.m  getD2.m  getJd.m  getJm.m  getJr.m  getJr.m~  getSlope.m  getSlope.m~  prova.m  trackingLS_YXZ.m  trackingLS_quat.m  untitled.m
papers/: .notes.autosave.xopp  notes.xopp  slides_first-order primal-dual_algorithm.pdf.xopp
scripts/: build_dtam.sh  generate_dataset.sh  run_dtam.sh  tum_photo_calib.sh
tum_photo_calib/mono_dataset_code-master/: CMakeLists.txt
tum_photo_calib/mono_dataset_code-master/src/: BenchmarkDatasetReader.h  FOVUndistorter.cpp  FOVUndistorter.h  PhotometricUndistorter.cpp  main_playbackDataset.cpp
